# live2d-agent

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  SKILL_DYNAMIC_LOADING.md  SKILL_SYSTEM_README.md  USAGE.md  USER_GUIDE.md  __main__.py  build.py  check_indent.py  config.example-prompt-modules.json  config.example.json  mypy.ini  pyproject.toml  pytest.ini  sitecustomize.py  test.md  test_fix.py  test_import_check.py  test_memory_simple.py  todo_text_bubble.md  verify_memory_structure.py  配置说明.txt
.github/workflows/: ci.yml
docs/: DYNAMIC_LOADING_REFACTORING.md  DYNAMIC_SKILLS.md  MODE_MANAGEMENT.md  USER_GUIDE.md  dynamic_tool_generation.md
examples/: dynamic_skills_example.py  skill_reloader_example.py
examples/dynamic_tools/: data_processing_example.py  http_request_example.py  system_info_example.py
internal/: AGENTS.md  __init__.py
internal/agent/: __init__.py  agent.py  api.py  bubble_timing.py  chat_service.py  register.py  response.py  tool_setup.py
internal/app/: bootstrap.py  live2d_agent_app.py  live2oder_app.py  runtime.py  smoke_bridge.py  tray.py
internal/config/: config.py  editor.py
internal/mcp/: __init__.py  backend.py  compression.py  config.py  manager.py  protocol.py  remote.py
internal/memory/: __init__.py  _archive.py  _context.py  _importance.py  _long_term.py  _manager.py  _session.py  _small_model_profile.py  _summary.py  _tool_offload.py  _types.py  context.py  types.py
internal/prompt_manager/: prompt_manager.py
internal/rag/: __init__.py  document.py  embeddings.py  index.py  rag.py
internal/skill/: __init__.py  base.py  dynamic_loader.py  external.py  integration.py  manager.py  registry.py
internal/ui/: __init__.py  bubble_widget.py  history_manager.py  input_box.py  settings_window.py  styles.py  title_bar.py
prompt_modules/: AGENTS.md
sitecustomize/: __init__.py
test/: AGENTS.md  test_config.py  test_config_editor.py  test_fix.py  test_import_check.py  test_memory_consolidation.py  test_runtime.py  test_tool_call_parse.py
tests/: AGENTS.md  __init__.py  conftest.py  test_config.py  test_config_editor.py  test_dynamic_basic.py  test_dynamic_loader.py  test_headless_imports.py  test_import.py  test_memory_audit.py
(+118 files in other folders)
