[project]
name = "live2oder"
version = "0.1.0"
description = ""
authors = [
    {name = "ShirasawaTopaz",email = "3489840593@qq.com"}
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiofiles (>=24.1.0,<25.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "transformers (>=5.3.0,<6.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "openai (>=2.29.0,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "pyside6 (>=6.6.0,<7.0.0)",
    "python-docx (>=1.1.0,<2.0.0)",
    "openpyxl (>=3.1.0,<4.0.0)",
    "python-pptx (>=0.6.2,<0.7.0)",
    "pymupdf (>=1.24.0,<2.0.0)"
]

[tool.poetry]
# ... 其他配置 ...
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pku"
url = "https://mirrors.pku.edu.cn/pypi/web/simple"
priority = "primary"

